# vice-mapper

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  VmMap.cc  VmMap.h  VmMapControls.cc  VmMapControls.h  VmTile.cc  VmTile.h  VmTileEmpty.cc  VmTileEmpty.h  VmTileImg.cc  VmTileImg.h  VmTilePath.cc  VmTilePath.h  dialogs.cc  dialogs.h  gui.glade  main.cc  make-bindist-win32.sh  map-controls.cc  map-controls.h  map-window.cc  map-window.h  myarea.cc  myarea.h  vice-mapper.patch
test-data/: vice-screen-.vsm
test-data/empty-map/: vice-screen-.vsm
test-data/high-edges/: vice-screen-.vsm
test-data/low-edges/: vice-screen-.vsm
test-data/max-edges/: vice-screen-.vsm
test-data/mixed-map/: vice-screen-.vsm
test-data/mixed-map/empty-map/: vice-screen-.vsm
test-data/shamus/: vice-screen-.vsm
